[package]
name = "mssql-pool"
version = "0.1.0"
edition = "2018"
authors = ["Frédéric Béland <beland.f@hotmail.ca>"]
license = "MIT"
description = "A MSSQL Poolable implementation for Rocket"
repository = "https://github.com/Voragain/mssql-pool"
homepage = "https://github.com/Voragain/mssql-pool"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = "0.5.13"
log = "0.4.14"
futures = "0.3.15"
snafu = "0.6.10"

[dependencies.tokio]
version = "1.6"
features = ["full"]

[dependencies.tokio-util]
version = "0.6.7"
features = ["compat"]

[dependencies.rocket_contrib]
version = "0.4"
features = ["databases"]